# metalearn

./: .gitignore  README.md  data_prep.py  dataloader.py  dataprep.py  model.py  notes.md  pretrained.py  pyproject.toml  test.ipynb  train.py  train_2.py  train_4.py  train_self-ce-frozen.py  train_self-ce.py
data/: metadata.json
failed/: model_2.py  model_lora.py  train_3.py
